<resources>
    <string name="app_name">UniGroc Retail</string>

    <string name="phone_number_hint">Phone Number</string>
    <string name="invalid_phone_number">Invalid Phone Number!</string>
    <string name="valid_phone_number">Valid Phone Number</string>
    <string name="send_otp_instruction">Tap Next to verify your account with your phone number. You don\'t need to
        manualy enter verification code if the number install in this phone...
    </string>
    <string name="enter_otp_instruction">Enter the code that was send to</string>
    <string name="didnt_get_code_instruction">I didn\'t get a code</string>
    <string name="terms_policy_acceptance_instruction">Tap Continue to accept our Terms,Data Policy, cookie use and the
        Privacy Policy and Terms of Service...
    </string>
    <string name="create_profile_instruction">Congratulation your number is verified click Continue to create your
        profile
    </string>
    <string name="title_activity_review_cart">Review Cart</string>
    <string name="action_settings">Settings</string>
    <string name="_8942">⋮</string>
    <string name="preferred_user">preferred_user</string>
    <string name="preferred_geoip">preferred_geoip</string>
    <string name="preferred_address">preferred_address</string>
    <string name="hint_select_default_address">Please Select a Address</string>
    <string name="hint_no_slots_available">Sorry, no slots available today. \nPlease select another day.</string>
    <string name="cart_items">cart_items</string>
    <string name="selected_order_item">selected_order_item</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
