<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:background="#fff"
                                                   android:layout_height="match_parent"
                                                   tools:context=".authentication.VerifyPhoneActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">
            <com.shuhart.stepview.StepView
                android:id="@+id/step_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:sv_animationType="All"
                app:sv_stepPadding="12dp"
                app:sv_steps="@array/phone_verification_steps" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter your mobile number"
                android:textStyle="bold"
                android:textColor="@color/color_grey"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <net.rimoto.intlphoneinput.IntlPhoneInput
                    android:id="@+id/phone_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/color_grey"
                android:text="@string/send_otp_instruction"/>
            <Button

                android:id="@+id/activity_send_otp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main_background"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="next"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/color_black"
                android:text="@string/enter_otp_instruction"/>
            <TextView
                android:id="@+id/activity_verify_entered_phone_num_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+918372890302"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#019b77"
                android:textStyle="bold"/>
            <com.chaos.view.PinView
                android:id="@+id/activity_verify_pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:textColor="#222222"
                android:textSize="18sp"
                android:cursorVisible="true"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="36dp"
                app:lineColor="#2f64ba"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <Button
                android:id="@+id/activity_verify_otp_btn"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_main_background"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="continue"/>
            <TextView
                android:id="@+id/activity_verify_didnt_get_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#019b77"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/didnt_get_code_instruction"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_policy_acceptance_instruction"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_grey"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:visibility="gone"
            android:gravity="center"
            android:background="#00A99D"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/panda_dribbble"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_profile_instruction"
                android:textColor="@color/color_white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/activity_verify_done_btn"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_main_background"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="Continue"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/activity_verify_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>